--- a/URL 2017-09.md
+++ b/URL 2017-09.md
@@ -1,11 +1,10 @@
-<kbd>⌘F</kbd>
+<kbd>⌘F</kbd><br />
+Get User Access Token > https://developers.facebook.com/tools/explorer/ <br />
+Get Group Info > https://graph.facebook.com/search?q=merzrasel&type=group&access_token=ACCESS_TOKEND)<br />
 ```
-[Get User Access Token](https://developers.facebook.com/tools/explorer/)<br />
-[Get Group Info](https://graph.facebook.com/search?q=merzrasel&type=group&access_token=ACCESS_TOKEND)<br />
+<kbd>https://graph.facebook.com/search?q=<kbd>URLGroupName</kbd>&type=group&access_token=<kbd>ACCESS_TOKEND</kbd></kbd>
 [Get Page Info](https://graph.facebook.com/search?q=merzrasel&type=page&access_token=ACCESS_TOKEND)<br />
+<kbd>https://graph.facebook.com/search?q=<kbd>URLPageName</kbd>&type=page&access_token=<kbd>ACCESS_TOKEND</kbd></kbd>
 
 https://graph.facebook.com/me/groups?access_token=ACCESS_TOKEND
 ```
-<kbd>https://graph.facebook.com/search?q=<kbd>GroupName</kbd>&type=group&access_token=<kbd>ACCESS_TOKEND</kbd></kbd>
-
-
