--- a/URL 2017-09.md
+++ b/URL 2017-09.md
@@ -1,10 +1,10 @@
 <kbd>⌘F</kbd><br />
 Get User Access Token > https://developers.facebook.com/tools/explorer/ <br />
 
-Get Group Info > https://graph.facebook.com/search?q=merzrasel&type=group&access_token=ACCESS_TOKEND)<br />
+Get Group Info > https://graph.facebook.com/search?q=merzrasel&type=group&access_token=ACCESS_TOKEND<br />
 <kbd>https://graph.facebook.com/search?q=<kbd>URLGroupName</kbd>&type=group&access_token=<kbd>ACCESS_TOKEND</kbd></kbd><br />
 
-[Get Page Info](https://graph.facebook.com/search?q=merzrasel&type=page&access_token=ACCESS_TOKEND)<br />
+Get Page Info > https://graph.facebook.com/search?q=merzrasel&type=page&access_token=ACCESS_TOKEND<br />
 <kbd>https://graph.facebook.com/search?q=<kbd>URLPageName</kbd>&type=page&access_token=<kbd>ACCESS_TOKEND</kbd></kbd><br />
 
 https://graph.facebook.com/me/groups?access_token=ACCESS_TOKEND
