--- a/URL 2017-09.md
+++ b/URL 2017-09.md
@@ -8,3 +8,18 @@ Get Page Info > https://graph.facebook.com/search?q=merzrasel&type=page&access_t
 <kbd>https://graph.facebook.com/search?q=<kbd>URLPageName</kbd>&type=page&access_token=<kbd>ACCESS_TOKEND</kbd></kbd><br />
 
 https://graph.facebook.com/me/groups?access_token=ACCESS_TOKEND
+
+
+####Task
+- [x] Site Color `White background and black font color`
+    - [ ] Header `Header with navigation drawer & home button one row fixed header`
+    - [ ] Footer `Simple one row some important link`
+####Moucup
+***Fiexd header***<br />
+Like: Header - https://coderwall.com/p/bpncoq/viewpager-children-into-single-layout-xml<br />
+`I like this header navigation`
+http://www.streamlineicons.com/index-testimonials.html
+***Footer Must Be Like***<br />
+https://coderwall.com/p/bpncoq/viewpager-children-into-single-layout-xml<br />
+
+[Rz Rasel]
