--- a/URL 2017-09.md
+++ b/URL 2017-09.md
@@ -10,7 +10,7 @@ Get Page Info > https://graph.facebook.com/search?q=merzrasel&type=page&access_t
 https://graph.facebook.com/me/groups?access_token=ACCESS_TOKEND
 
 
-####Task
+#### Task
 - [x] Site Color `White background and black font color`
     - [ ] Header `Header with navigation drawer & home button one row fixed header`
     - [ ] Footer `Simple one row some important link`
@@ -23,5 +23,25 @@ http://www.streamlineicons.com/index-testimonials.html<br />
 
 ***Footer Must Be Like***<br />
 https://coderwall.com/p/bpncoq/viewpager-children-into-single-layout-xml<br />
+
+
+Like Footer: https://www.iso.org/iso-639-language-codes.html
+
+### Country
+http://www.nationsonline.org/oneworld/country_code_list.htm
+country id
+country name
+country native name
+country iso alpha code 2
+country iso alpha code 3
+country iso numeric code
+
+### Language
+https://www.loc.gov/standards/iso639-2/php/code_list.php
+lan id
+lan name
+lan native name
+lan iso alpha code 2
+lan iso alpha code 3
 
 [Rz Rasel]
