--- a/URL 2017-09.md
+++ b/URL 2017-09.md
@@ -29,20 +29,24 @@ Like Footer: https://www.iso.org/iso-639-language-codes.html
 
 ### Country
 http://www.nationsonline.org/oneworld/country_code_list.htm<br />
-country id
-country name
-country native name
-country iso alpha code 2
-country iso alpha code 3
-country iso numeric code
+* Country
+    * country id
+    * country name
+    * country native name
+    * country iso alpha code 2
+    * country iso alpha code 3
+    * country iso numeric code
 
 ### Language
 https://www.loc.gov/standards/iso639-2/php/code_list.php<br />
 https://datahub.io/core/language-codes<br />
-lan id
-lan name
-lan native name
-lan iso alpha code 2
-lan iso alpha code 3
+https://msdn.microsoft.com/en-us/library/ee825488(v=cs.20).aspx<br />
+* Language
+    * lan id
+    * lan name
+    * lan native name
+    * lan Culture Name
+    * lan iso alpha code 2
+    *  lan iso alpha code 3
 
 [Rz Rasel]
