--- a/URL 2017-09.md
+++ b/URL 2017-09.md
@@ -49,4 +49,22 @@ https://msdn.microsoft.com/en-us/library/ee825488(v=cs.20).aspx<br />
     * lan iso alpha code 2
     *  lan iso alpha code 3
 
+### Tutorial
+Tutorila - Photoshop<br />
+How to Create a Stylish Facebook Cover | Photoshop Tutorial<br />
+https://www.youtube.com/watch?v=hl39N67OhNc<br />
+Facebook Cover Photo Design in Photoshop CC | Photoshop Tutorial<br />
+https://www.youtube.com/watch?v=CBaHJNVqG-s<br />
+How To Make Facebook Cover Photo Design - Photoshop Tutorial<br />
+https://www.youtube.com/watch?v=Mci0z1DxPK0<br />
+Illustrator Magazine Codesigns cover design tutorial<br />
+https://www.youtube.com/watch?v=tbIhB90f3Rs<br />
+How to strip background and add a character to your book cover design in Photoshop<br />
+https://www.youtube.com/watch?v=gOst7jYdEC4<br />
+Product Advertising Poster Design In Photoshop CC<br />
+https://www.youtube.com/watch?v=fsfp6ZQHn1Q<br />
+Poster/Ad Design Tutorial By Rated (Must Watch)<br />
+https://www.youtube.com/watch?v=U6gC5jKCsGg<br />
+<br />
+
 [Rz Rasel]
