--- a/URL 2017-09.md
+++ b/URL 2017-09.md
@@ -67,4 +67,81 @@ Poster/Ad Design Tutorial By Rated (Must Watch)<br />
 https://www.youtube.com/watch?v=U6gC5jKCsGg<br />
 <br />
 
+* site url group
+    * group id
+    * group name
+    * group slug (unique)
+* site url manager
+    * id
+    * parent id
+    * group id
+    * name
+    * slug (unique)
+    * css before (json arra > array(css =>array(class => values, id => values, inline => values), javascript =>array(), html => array())
+    * css after (json arra > array(css =>array(class => values, id => values, inline => values), javascript =>array(), html => array())
+    * status
+    * meta content
+    * meta description
+
+
+https://www.youtube.com/watch?v=BoEhmxYrN4A
+
+
+<!---
+your comment goes here
+and here
+com.sharktube.BDNewsHeadlines
+-->
+[comment]: <> (### BDNewsHeadlines)
+[comment]: <> (activities->MainActivity->getDataFromServer())
+utilities->Utility
+URL = "http://52.74.75.136";
+VERSION = "v2";
+public static String getNewsURL(Context context) {
+    StringBuilder sb = new StringBuilder();
+    sb.append(URL).append("/").append(VERSION).append("/").append(Utilities.getApplicationVersion()).append("/").append(Utilities.getSmartPhoneID()).append("/").append(Utilities.getPackageName(context)).append("/").append(Utilities.getAccountInformation(context)).append("/").append(getGCMToken(context));
+    return sb.toString();
+}
+RequestBody formBody = new FormEncodingBuilder().add("device_id", Utilities.getSmartPhoneID()).add("app_id", Utilities.getAppVersion(this) + "").add("reg_id", "i978bT8BTO87bt87b8769tb87t8i7tn8t").build();
+URL/VERSION/versionName(versionCode-21)/getSmartPhoneID/com.sharktube.BDNewsHeadlines/getSmartPhoneID-no-mail@gmail.com
+
+
+http://52.74.75.136/v2/21/123456fe/com.sharktube.BDNewsHeadlines/123456fe-no-mail@gmail.com
+device_id, 123456fe
+app_id, 21
+reg_id, i978bT8BTO87bt87b8769tb87t8i7tn8t
+
+
+http://bd.n-api.com/api/news/
+
+AndroidImageSlider
+https://github.com/daimajia/AndroidImageSlider
+https://stackoverflow.com/questions/2995145/image-slideshow-example-in-android
+http://androidopentutorials.com/android-image-slideshow-using-viewpager/
+https://www.androidtutorialpoint.com/basics/android-image-slider-tutorial/
+http://www.androhub.com/android-image-slider-using-viewpager/
+http://demonuts.com/2017/03/17/image-slider-with-slideshow-using-viewpager-android/
+http://stacktips.com/tutorials/android/android-viewflipper-example
+https://inducesmile.com/android/create-android-image-slideshow-using-android-viewflipper/
+https://stackoverflow.com/questions/8908862/how-to-set-dymanic-images-to-viewflipper-in-android
+
+http://abhiandroid.com/ui/viewflipper
+https://manijshrestha.wordpress.com/2013/12/21/dynamic-image-view-flipper-using-ion/
+https://stackoverflow.com/questions/25518307/dynamically-create-imageview-in-viewflipper-getting-imageview-id
+http://wptrafficanalyzer.in/blog/image-slideshow-from-right-to-left-using-viewflipper-in-android/
+
+
+URLBaseNewspaper
+* urlbasenewspaper
+    * id
+    * name default
+    * country id
+    * language id
+    * url home
+* urlnpurllist
+    * id
+    * page tab name
+    * url
+
+
 [Rz Rasel]
