--- a/URL 2017-09.md
+++ b/URL 2017-09.md
@@ -67,11 +67,11 @@ Poster/Ad Design Tutorial By Rated (Must Watch)<br />
 https://www.youtube.com/watch?v=U6gC5jKCsGg<br />
 <br />
 
-* site url group
+* Site URL Group
     * group id
     * group name
     * group slug (unique)
-* site url manager
+* Site URL Manager
     * id
     * parent id
     * group id
@@ -82,6 +82,8 @@ https://www.youtube.com/watch?v=U6gC5jKCsGg<br />
     * status
     * meta content
     * meta description
+    * View Permission (public / private $is_logged_in)
+    * order
 
 
 https://www.youtube.com/watch?v=BoEhmxYrN4A
@@ -129,6 +131,24 @@ http://abhiandroid.com/ui/viewflipper
 https://manijshrestha.wordpress.com/2013/12/21/dynamic-image-view-flipper-using-ion/
 https://stackoverflow.com/questions/25518307/dynamically-create-imageview-in-viewflipper-getting-imageview-id
 http://wptrafficanalyzer.in/blog/image-slideshow-from-right-to-left-using-viewflipper-in-android/
+
+
+
+Dynamic Menu CodeIgniter
+http://lvasquez.github.io/2013/08/19/dynamic-menu-codeigniter/
+https://github.com/edomaru/codeigniter_multilevel_menu
+https://github.com/lirantal/codeigniter-menu
+current_url();
+https://gist.github.com/pwenzel/4567675 (BoxColor = Site Color)
+http://naresh-php.blogspot.com/2013/11/how-to-get-current-page-url-in.html
+$this->load->helper('url');
+
+
+$currentURL = current_url();
+
+print_r($currentURL);
+http://itsolutionstuff.com/post/how-to-get-current-url-with-query-string-in-codeigniterexample.html
+
 
 
 URLBaseNewspaper
