--- a/URL 2017-09.md
+++ b/URL 2017-09.md
@@ -133,6 +133,14 @@ https://stackoverflow.com/questions/25518307/dynamically-create-imageview-in-vie
 http://wptrafficanalyzer.in/blog/image-slideshow-from-right-to-left-using-viewflipper-in-android/
 
 
+Php code for display 10 records from mysql dynamically
+https://stackoverflow.com/questions/14451364/php-code-for-display-10-records-from-mysql-dynamically
+https://www.phpclasses.org/package/8493-PHP-Show-pagination-of-MySQL-results-for-Bootstrap.html
+https://www.phpflow.com/php/simple-pagination-with-php-and-mysql-using-jquery/
+http://www.phpzag.com/pagination-with-jquery-mysql-and-php/
+http://www.phpgang.com/how-to-create-advance-pagination-in-php-mysql-with-jquery_404.html
+http://www.onlamp.com/pub/a/php/2000/11/02/next_previous.html
+
 
 Dynamic Menu CodeIgniter
 http://lvasquez.github.io/2013/08/19/dynamic-menu-codeigniter/
