--- a/URL 2017-09.md
+++ b/URL 2017-09.md
@@ -124,7 +124,7 @@ http://www.phpzag.com/pagination-with-jquery-mysql-and-php/
 http://www.phpgang.com/how-to-create-advance-pagination-in-php-mysql-with-jquery_404.html
 http://www.onlamp.com/pub/a/php/2000/11/02/next_previous.html
 
-[click on this link](#my-multi-word-header)
+[Link to Header](#the-header)
 
 Dynamic Menu CodeIgniter
 http://lvasquez.github.io/2013/08/19/dynamic-menu-codeigniter/
@@ -158,7 +158,9 @@ URLBaseNewspaper
 
 
 
-
+[click on this link](#my-multi-word-header)
 ### My Multi Word Header
+
+## The Header
 
 [Rz Rasel]
