--- a/Tutorial 2017-09-16.md
+++ b/Tutorial 2017-09-16.md
@@ -1,4 +1,5 @@
 ### Tutorial 2017-09-16
+[Understanding the closures debate](https://www.javaworld.com/article/2077869/scripting-jvm-languages/understanding-the-closures-debate.html)
 
 [click on this link](#my-multi-word-header)
 ### My Multi Word Header
