--- a/Tutorial 2017-09-16.md
+++ b/Tutorial 2017-09-16.md
@@ -4,4 +4,12 @@
 [click on this link](#my-multi-word-header)
 ### My Multi Word Header
 
+Bangladesh
+BD
+BGD
+050
+PHONE, CALL CODE	 880
+http://mainfacts.com/world-countries-capitals-cities-codes/BD-BGD-Bangladesh
+http://wits.worldbank.org/wits/wits/witshelp/content/codes/country_codes.htm
+
 [Rz Rasel]
