--- a/Tutorial 2017-09-16.md
+++ b/Tutorial 2017-09-16.md
@@ -12,4 +12,42 @@ PHONE, CALL CODE	 880
 http://mainfacts.com/world-countries-capitals-cities-codes/BD-BGD-Bangladesh
 http://wits.worldbank.org/wits/wits/witshelp/content/codes/country_codes.htm
 
+### Bengali Languages
+Arakanese,
+Assamese,
+Bishnupriya,
+Burmese,
+Chak and Chakma,
+Asho Chin,
+Bawm Chin,
+Falam Chin,
+Haka Chin,
+Khumi Chin,
+Chittagonian,
+Darlong,
+Garo,
+Hajong,
+Ho,
+Khasi,
+Koch,
+Kok Borok,
+Kurux,
+Megam,
+Meitei,
+Mizo,
+Mru,
+Mundari,
+Pankhu,
+Pnar,
+Rajbanshi,
+Riang,
+Oraon Sadri,
+Santali, Shendu,
+Sylheti,
+Tangchangya,
+Tippera,
+Usui and War.
+
+Like: http://www.commisceo-global.com/country-guides/bangladesh-guide
+
 [Rz Rasel]
