--- a/Tutorial 2017-09-16.md
+++ b/Tutorial 2017-09-16.md
@@ -49,6 +49,10 @@ Tippera,
 Usui and War.
 http://www.languagecomparison.com/en/assamese-language-code/model-88-9
 
+| English | ISO 639-1 | ISO 639-2 |
+| Assamese | as | asm |
+| Bengali | bn | ben |
+
 Like: http://www.commisceo-global.com/country-guides/bangladesh-guide
 
 [Rz Rasel]
