--- a/Tutorial 2017-09-16.md
+++ b/Tutorial 2017-09-16.md
@@ -53,7 +53,14 @@ http://www.languagecomparison.com/en/assamese-language-code/model-88-9
 | ------ | ------ | ------ |
 | Assamese | as | asm |
 | Bengali | bn | ben |
+| Bishnupriya |  | bpy |
+| Burmese | my |  |
+| Chakma |  | ccp |
+| Asho |  | csh |
+| English | en | eng |
+| Sylheti |  | syl |
 
+[Windows Locale Codes - Sortable list](https://www.science.co.il/language/Locale-codes.php)
 Like: http://www.commisceo-global.com/country-guides/bangladesh-guide
 
 [Rz Rasel]
